--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -21,8 +21,6 @@ div,
 span,
 fieldset{
     @include reset_spaces();
-    
-   
 }
 
 body{
@@ -30,10 +28,9 @@ body{
     background-color: $bc;
     color: $wt;
     font-family: $mnsrt, Arial, Helvetica, sans-serif;
-    background-image: url('../images/techFestback.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+}
+.off_scroll{
+    overflow: hidden;
 }
 ul,li{
     list-style-type: none;
@@ -74,19 +71,276 @@ fieldset{
     padding: 0 30px;
 }
 
+.title-block{
+    margin-bottom: 20px;
+    &__subtitle{
+        text-transform: uppercase;
+        font-size: 8px;
+        margin-bottom: 12px;
+        font-weight: 400;
+
+    }
+    &__title{
+        font-size: 20px;
+    }
+}
+
+.info{
+    &__title{
+        font-size: 14px;
+        margin-bottom: 10px;
+        &::after{
+            content: " ";
+            display: block;
+            margin-top: 10px;
+            background-color: rgba(255, 255, 255, 0.521);
+            width: 244px;
+            height: 1px;
+        }
+    }
+    &__text{
+        font-size: 8px;
+        text-align: justify;
+        line-height: 18px;
+        text-transform: uppercase;
+    }
+    
+}
+
+
+
+.warning{
+    margin-top: 14px;
+    &__text,
+    &__list{
+        font-size: 8px;
+        line-height: 18px;
+        text-transform: uppercase;
+        text-align: justify;
+    }
+
+    &__text{
+        font-weight: bold;
+    }
+    &__list{
+        padding-left: 11px;
+    }
+    &__list-item{
+        list-style-type: decimal;
+    }
+}
+
+
+.criteria{
+    margin-top: 14px;
+
+    &__title{
+        font-size: 10px;
+        margin-bottom: 8px;
+    }
+    &__title,
+    &__list-item{
+        text-transform: uppercase;
+    }
+    &__list{
+        padding-left: 11px;
+        font-size: 8px;
+        font-weight: bold;
+    }
+    &__list-item{
+        list-style-type: square;
+        margin-bottom: 5px;
+        line-height: 18px;
+        text-align: justify;
+        
+    }
+    &__list-item_long-text{
+        margin-bottom: 10px;
+
+        
+    }
+
+    &__list-title{
+        margin-top: 6px;
+    }
+    &__sublist{
+        padding-left: 11px;
+    }
+    &__sublist-item{
+        margin-top: 6px;
+        list-style-type: square;
+    }
+}
+
+
+@media (min-width: 567px){
+    .title-block{
+        &__subtitle{
+            font-size: 10px;
+        }
+        &__title{
+            font-size: 25px;
+        }
+
+    }
+    .warning{
+        margin-top: 20px;
+        &__text,
+        &__list{
+            font-size: 12px;
+            line-height: 25px;
+           
+        }
+
+    }
+    .info{
+        &__title{
+            font-size: 18px;
+            &::after{
+                width: 490px;
+            }
+        }
+        &__text{
+            font-size: 12px;
+            line-height: 25px;
+        }
+    }
+    .criteria{
+        margin-top: 20px;
+        &__title{
+            font-size: 14px;
+        }
+        &__list{
+            padding-left: 13px;
+            font-size: 10px;
+            
+        }
+        &__sublist{
+            padding-left: 13px;
+        }
+        &__list-item{
+            line-height: 25px;
+        }
+
+    }
+    
+
+}
+  
+@media (min-width:768px) {
+    
+    .info{
+        &__title{
+            &::after{
+                width: 680px;
+            }
+        }
+       
+    }
+    .criteria{
+        &__list-item{
+            margin-bottom: 8px;
+        }
+
+    } 
+}
 
 @media (min-width: 992px) {
     .container{
         padding: 0 60px ;
     };
+    .title-block{
+        margin-bottom: 40px;
+        &__subtitle{
+            font-size: 12px;
+        }
+        &__title{
+            font-size: 32px;
+        }
+
+    }
+    .warning{
+        margin-top: 20px;
+        &__text,
+        &__list{
+            font-size: 14px;
+        }
+
+    }
+    .info{
+        &__title{
+            font-size: 20px;
+            &::after{
+                width: 840px;
+            }
+        }
+        &__text{
+            font-size: 14px;
+            
+        }
+    }
+    .criteria{
+        
+       
+        &__list{
+  
+            font-size: 12px;
+        }
+    }
+       
+        
+
+    
 }
 
 @media (min-width: 1200px) {
     .container{
         padding: 0;
         width: 1140px;
-        
         margin: 0 auto;
+    }
+    .title-block{
+        &__title{
+            font-size: 36px;
+        }
+    }
+    .warning{
+       
+        &__text,
+        &__list{
+            line-height: 30px;
+        }
+
+    }
+    .info{
+        &__title{
+            font-size: 25px;
+            &::after{
+                width: 480px;
+            }
+        }
+        &__text{
+            line-height: 30px;
+        }
+    }
+    .criteria{
+        margin-top: 20px;
+        &__title{
+            font-size: 16px;
+            margin-bottom: 12px;
+        }
+        &__list{
+            padding-left: 16px;
+            
+        }
+        &__list-item{
+            line-height: 30px; 
+        }
+        &__sublist{
+            padding-left: 16px;
+        }
+
+
     }
     
 }
