--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -8,10 +8,15 @@
 @import './helpers/fonts';
 @import './helpers/vars';
 @import './helpers/reset';
+@import './helpers/addintional/er-404';
+@import './helpers/addintional/success';
 @import './content/header';
 @import './content/head';
 @import './content/form';
 @import './content/footer';
 @import './content/instruction';
 @import './content/schedule';
-@import './helpers/errors/er-404';
+@import './content/sections';
+@import './content/about';
+
+
