--- a/assets/styles/scss/content/_footer.scss
+++ b/assets/styles/scss/content/_footer.scss
@@ -1,32 +1,16 @@
 .footer{
-    padding: 80px 0 16px 0;
+    padding: 16px 0;
     text-align: center;
     font-family: $msref;
-    &__social-network-block{
-        margin-bottom: 17px;
-    }
-    &__title{
-        font-size: 14px;
-        margin-bottom: 16px;
+    background-color: $bc;
+    &__social-networks{
+        margin-bottom: 20px;
     }
     &__icons{
         font-size: 18px;
         margin: 0 17px;
     }
-    &__navigation-block{
-        margin-bottom: 23px;
-    }
-    &__logo{
-        width: 87px;
-        height: 20px;
-        margin-bottom: 10px;
-    }
-
-    &__list{
-        display: flex;
-        justify-content: space-between;
-    }
-    &__links,
+   
     &__copyright{
         font-size: 8px;
     }
@@ -34,22 +18,11 @@
 
 @media (min-width: 576px){
     .footer{
-        &__title{
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
         &__icons{
             font-size: 22px;
         }
-        &__list{
-            justify-content: space-around;
-        }
-        &__logo{
-            width: 120px;
-            height: 30px;
-            // margin-bottom: 10px;
-        }
-        &__links,
+        
+       
         &__copyright{
             font-size: 12px;
         }   
@@ -57,13 +30,11 @@
 }
 @media (min-width: 768px){
     .footer{
-        &__logo{
-            margin-bottom: 15px;
-        }
+      
         &__icons{
             font-size: 25px;
         }
-        &__links,
+     
         &__copyright{
             font-size: 14px;
         }
@@ -72,10 +43,7 @@
 
 @media (min-width: 992px){
    .footer{
-        &__title{
-            font-size: 22px;
-            margin-bottom: 20px;
-        }
+       
         &__logo{
             width: 180px;
             height: 40px;
@@ -87,18 +55,11 @@
 }
 @media (min-width: 1200px){
     .footer{
-        &__title{
-            font-size: 26px;
-        }
-        &__logo{
-            width: 220px;
-            height: 45px;
-        }
         &__links{
             font-size: 20px;
         }
     }
 }
-@media (min-width: 1400px){
+// @media (min-width: 1400px){
 
-}
+// }
