--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -18,26 +18,24 @@
         padding: 15px 0;
         border-radius: 20px;
 
-        // background: none;
-        // border: 1px solid $wt;
-        // color: rgba(255, 255, 255, 0.945);
-        // transition: 1s;
+        
+        background: none;
+        border: 1px solid $wt;
+        color: rgba(255, 255, 255, 0.945);
+        transition: 1s;
 
-        // &:hover{
-        //     color: $bc;
-        //     box-shadow: 0px 0px 50px 30px rgba(255, 255, 255, 0.2);
-        //     // box-shadow: 0 0 5px rgba(255, 255, 255, 0.2),
-        //     //             0 0 25px rgba(255, 255, 255, 0.2),
-        //     //             0 0 50px rgba(255, 255, 255, 0.2),
-        //     //             0 0 200px rgba(255, 255, 255, 0.2);
-        // }
+        &:hover{
+            color: $bc;
+            // box-shadow: 0px 0px 50px 30px rgba(255, 255, 255, 0.2);
+            // box-shadow: 0 0 5px rgba(255, 255, 255, 0.2),
+            //             0 0 25px rgba(255, 255, 255, 0.2),
+            //             0 0 50px rgba(255, 255, 255, 0.2),
+            //             0 0 200px rgba(255, 255, 255, 0.2);
+        }
 
        
     }
-
-  
 }
-
 @media (min-width: 576px) {
     .head{
         // padding: 60px 0;
@@ -47,27 +45,20 @@
             border-radius: 50px;
             font-size: 20px;
         }
-    
-
     } 
 }
 
 
 @media (min-width: 768px) {
     .head{
-        
         &__image{
             margin-bottom: 60px;
-            
         }
-         
     } 
 }
 
 @media (min-width: 992px) {
     .head{
-
-
         &__link{
             width: 380px;
             padding: 21px 0;
@@ -83,14 +74,15 @@
             margin: 0 auto;
             width: 680px;
             height: 420px;
-            
         }
         &__link{
+            margin-top: 30px;
             width: 280px;
             padding: 21px 0;
         }
         
     } 
+   
 }
 
 
