--- a/assets/styles/scss/content/_header.scss
+++ b/assets/styles/scss/content/_header.scss
@@ -1,6 +1,7 @@
 .header{
     padding: 12px 0;
     background-color: $bc;
+   
     
     &__wrapper{
         justify-content: space-between;
@@ -34,10 +35,12 @@
         bottom: 0;
         left: 0;
         right: 0;
+        z-index: 9999;
         background-color: $bc;
         display: none;
+        // overflow: ;
     }
-
+   
     &__navigation{
         // padding-top: 15px;
         text-align: right;
@@ -72,6 +75,15 @@
 .header,.overlay{
     user-select: none;
 }
+.sticky{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
+    
+}
 
 
 @media (min-width: 576px) {
@@ -94,7 +106,6 @@
 
         
     }
-
     
 }
 
@@ -143,6 +154,9 @@
         }
             
     }
+    // .sticky{
+    //     padding: 24px 60px;
+    // }
     
 }
 
@@ -177,6 +191,7 @@
             }
         }
     }
+    
     
 }
 
