--- a/assets/styles/scss/content/_instruction.scss
+++ b/assets/styles/scss/content/_instruction.scss
@@ -1,48 +1,41 @@
-.instruction{
+.instructions{
     padding: 34px  0;
-    text-align: center;
-    &__title{
-        font-size: 20px;
-        margin-bottom: 20px;
-    }
-    &__list{
+    &__wrapper{
         display: flex;
         flex-direction: column;
-        align-items: center;
     }
-    &__list li{
-        background-color: #fff;
-        width: 230px;
-        height: 38px;
-        margin:  0 auto;
-        margin-bottom: 12px;
-        padding: 8px 24px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+    &__block{
+        border-bottom: 1px solid rgba(255, 255, 255, 0.521);
+        padding-bottom: 20px;
+        margin-bottom: 20px;
     }
-
-    &__links{
-        color: #000;
-        font-size: 10px;
+    &__title{
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    &__link{
+        font-size: 8px;
         font-weight: bold;
     }
+    &__link-icon{
+        position: relative;
+        top: 4px;
+        left: 12px;
+    
+    }
+   
 }
 
 @media (min-width: 576px) {
-    .instruction{
+    .instructions{
         &__title{
-            font-size: 30px;
-          
+            font-size: 18px;
         }
-        &__list li{
-            width: 320px;
-            height: 48px;
-    
+        &__link{
+            font-size: 10px;
         }
-        &__links{
-            font-size: 12px;
+        &__link-icon{
+            font-size: 10px;
         }
 
     }
@@ -50,66 +43,57 @@
 }
 
 @media (min-width: 768px) {
-    .instruction{
+    .instructions{
         &__title{
-            font-size: 36px;
-            margin-bottom: 34px;
+            font-size: 20px;
         }
-        &__list li{
-            width: 360px;
-            height: 56px;
-            margin-bottom: 20px;
-    
+        &__block{
+            margin-bottom: 40px;
+           
         }
+        
        
-        &__links{
-            font-size: 14px;
-        }
 
     }
     
 }
 
 @media (min-width: 992px) {
-   
-    .instruction{
+    .instructions{
         padding: 64px  0;
+        &__wrapper{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        &__list{
+            margin: 100px 0 0 80px;
+        }
+        &__block{
+           width: 380px;
+        }
         &__title{
-            margin-bottom: 48px;
+            font-size: 25px;
         }
-        &__list li{
-            width: 480px;
-            height: 64px;
-            margin-bottom: 30px;
+        &__link{
+            font-size: 12px;
         }
-       
-        &__links{
-            font-size: 18px;
+        &__link-icon{
+            font-size: 12px;
         }
+      
 
     }
     
 }
 
 @media (min-width: 1200px) {
-    .instruction{
-        &__list{
-            flex-direction: row;
-            flex-wrap: wrap;
+    .instructions{
+        padding: 20px 0;
+        &__block{
+            width: 520px;
         }
-        &__title{
-            font-size: 26px;
-            
-        }
-        &__list li{
-            width: 320px;
-            height: 64px;
-            margin-bottom: 30px;
-        }
-        &__links{
-            font-size: 14px;
-        }
-       
+    
        
 
     }
@@ -118,14 +102,16 @@
 
 
 @media (min-width: 1400px) {
-    .instruction{
+    .instructions{
     
-        &__list li{
-            width: 380px;
-            
+        &__block{
+            width: 640px;
         }
-        &__links{
-            font-size: 16px;
+        &__link{
+            font-size: 14px;
+        }
+        &__link-icon{
+            font-size: 14px;
         }
        
 
